# Dockerfiles

./: .travis.yml  CMakeLists.txt
VCA2/: CMakeLists.txt
VCA2/centos-7.4/ffmpeg/: CMakeLists.txt  Dockerfile
VCA2/centos-7.4/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.4/gst/: CMakeLists.txt  Dockerfile
VCA2/centos-7.4/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.5/ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.5/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.5/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.5/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.6/ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.6/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.6/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/centos-7.6/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/ubuntu-16.04/ffmpeg/: CMakeLists.txt  Dockerfile
VCA2/ubuntu-16.04/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/ubuntu-16.04/gst/: CMakeLists.txt  Dockerfile
VCA2/ubuntu-16.04/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/ubuntu-18.04/ffmpeg/: CMakeLists.txt  Dockerfile
VCA2/ubuntu-18.04/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/ubuntu-18.04/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
VCA2/ubuntu-18.04/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/: BaseDockerfile.cmake.in
Xeon/centos-7.4/base/: CMakeLists.txt  Dockerfile  Untitled-1
Xeon/centos-7.4/centos74base/: CMakeLists.txt  Dockerfile
Xeon/centos-7.4/dldt+ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/dldt+gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.4/ospray/: Dockerfile  Dockerfile.m4
Xeon/centos-7.4/ospray+mpi+OpenImageIO/: Dockerfile  Dockerfile.m4
Xeon/centos-7.5/centos75base/: CMakeLists.txt  Dockerfile
Xeon/centos-7.5/dldt+ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/dldt+gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/nginx+rtmp/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.5/ospray/: Dockerfile  Dockerfile.m4
Xeon/centos-7.5/ospray+mpi+OpenImageIO/: Dockerfile  Dockerfile.m4
Xeon/centos-7.6/centos76base/: CMakeLists.txt  Dockerfile
Xeon/centos-7.6/dldt+ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.6/dldt+gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.6/ffmpeg/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.6/ffmpeg+gst+dev/: CMakeLists.txt  Dockerfile  Dockerfile.m4
Xeon/centos-7.6/gst/: CMakeLists.txt  Dockerfile  Dockerfile.m4
XeonE3/: README.md
script/: build.sh  image.cmake  os.cmake
template/: OpenImageIO.m4  automake.m4  base.cmake.in  build-tools.m4  cmake.m4  dldt-ie.m4  embree.m4  ffmpeg.m4  gmmlib.m4  gst-orc.m4  gst-plugin-bad.m4  gst-plugin-base.m4  gst-plugin-good.m4  gst-plugin-libav.m4  gst-plugin-svt.m4  gst-plugin-ugly.m4  gst-plugin-vaapi.m4  gst.m4  gstreamer-videoanalytics.m4  ispc.m4  libaom.m4  libcjson.m4  libdrm.m4  libfdk-aac.m4  libmp3lame.m4  libogg.m4  libopus.m4  librdkafka.m4  libva-utils.m4  libva.m4  libvorbis.m4  libvpx.m4  libx264.m4  libx265.m4  media-driver.m4  media-sdk.m4  nasm.m4  nginx-conf.m4  nginx-qat.m4  nginx-rtmp.m4  (+17 more)
test/: dldt_gst_video_analytics.sh
(+133 files in other folders)
